<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/formulapp_background"
    tools:context=".Physics_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/FAheader2"

                android:text="@string/linear_motion_with_constant_acceleration" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView7"

                android:text="@string/v_u_at"
                tools:text="v = u + at" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView8"

                android:text="@string/s_ut_1_2at_2" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView9"

                android:text="@string/v_2_u_2_2as" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView10"

                android:text="@string/s_u_2_v_2_t" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView11"

                android:text="@string/average_speed_distance_time" />

            <TextView
                android:id="@+id/textView12"
                style="@style/FAheader2"

                android:text="@string/relative_motion" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView"

                android:text="@string/sb_sb_sc" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView13"

                android:text="@string/vbc_vb_vc" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView14"

                android:text="@string/abc_ab_ac" />

            <TextView
                android:id="@+id/textView15"
                style="@style/FAheader2"

                android:text="@string/momentum_of_a_partical" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView16"

                android:text="@string/mv" />

            <TextView
                android:id="@+id/textView17"
                style="@style/FAheader2"

                android:text="@string/newton_s_experimental_law_nel" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView18"

                android:text="@string/v1_v2_e_u1_u2" />

            <TextView
                android:id="@+id/textView19"
                style="@style/FAheader2"

                android:text="@string/conservation_of_momentum" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView20"

                android:text="@string/m1_u1_m2_u2_m1_v1_m2_v2" />

            <TextView
                android:id="@+id/textView21"
                style="@style/FAheader2"

                android:text="@string/impulse_change_in_momentum" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView22"

                android:text="@string/m_v_m_u" />

            <TextView
                android:id="@+id/textView36"
                style="@style/FAheader2"

                android:text="@string/angle_in_radians" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView37"

                android:text="@string/s_r" />

            <TextView
                android:id="@+id/textView38"
                style="@style/FAheader2"

                android:text="@string/angular_velocity" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView39"


                android:text="@string/r" />

            <TextView
                android:id="@+id/textView40"
                style="@style/FAheader2"

                android:text="@string/linear_velocity_and_angular_velocity" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView41"

                android:text="@string/v_r" />

            <TextView
                android:id="@+id/textView42"
                style="@style/FAheader2"

                android:text="@string/centripetal_acceleration" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView43"


                android:text="@string/a_2_r" />

            <TextView
                android:id="@+id/textView44"
                style="@style/FAheader2"

                android:text="@string/centripetal_force" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView45"

                android:text="@string/f_m_r_2_m_v_2_2" />

            <TextView
                style="@style/FAheader2"
                android:id="@+id/textView46"

                android:text="@string/newton_s_law_of_gravitation" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView47"

                android:text="@string/f_g_m1_m2_d_2" />

            <TextView
                style="@style/FAheader2"
                android:id="@+id/textView48"

                android:text="@string/force_and_acceleration" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView49"

                android:text="@string/f_m_a" />

            <TextView
                style="@style/FAheader2"
                android:id="@+id/textView50"

                android:text="@string/weight_and_acceleration_due_to_gravity" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView51"

                android:text="@string/w_m_g_v_g_g_gm_r_2" />

            <TextView
                style="@style/FAheader2"
                android:id="@+id/textView52"

                android:text="@string/period_of_a_satellite" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView55"

                android:text="@string/t_2_4_2_r_3_gm" />

            <TextView
                style="@style/FAheader2"
                android:id="@+id/textView54"

                android:text="@string/moment_of_a_force" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView32"

                android:text="@string/m_fd" />

            <TextView
                style="@style/FAheader2"
                android:id="@+id/textView53"

                android:text="@string/torque_of_a_couple" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView56"

                android:text="@string/t_fd" />

            <TextView
                style="@style/FAheader2"
                android:id="@+id/textView23"

                android:text="@string/centres_of_gravity"
               />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView25"

                android:text="@string/hemisphere_radius_r" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView26"

                android:text="@string/_3_8_r_from_centre" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView27"

                android:text="@string/hemispherical_shell_radius_r" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView28"

                android:text="@string/_1_2_r_from_centre" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView29"

                android:text="@string/right_circular_cone_radius_r" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView30"

                android:text="@string/_1_4_h_from_the_base" />

            <TextView
                android:id="@+id/textView31"
                style="@style/FAheader2"

                android:text="@string/triangular_lamina" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView33"

                android:text="@string/_1_3_from_base_along_median" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView34"

                android:text="@string/x1_x2_x3_3_y1_y2_y3_3" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView35"

                android:text="@string/arc_radius_r_angle_2" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView58"

                android:text="@string/r_sin" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView59"

                android:text="@string/sector_of_disc_radius_r_angle_2" />

            <TextView
                style="@style/FAbody"
                android:id="@+id/textView60"

                android:text="@string/_2r_sin_3" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>