<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/formulapp_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Trig_page"
    tools:showIn="@layout/content_main">

    <ScrollView
        android:layout_width="417dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style = "@style/FAheader2"
                android:id="@+id/textView76"

                android:text="@string/odd_even_identities" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView77"

                android:text="@string/sin_x_sin_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView78"


                android:text="@string/cos_x_cos_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView79"


                android:text="@string/tan_x_tan_x" />

            <TextView
                style = "@style/FAheader2"
                android:id="@+id/textView83"

                android:text="@string/angle_sum_and_difference_identities" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView84"


                android:text="@string/sin_sin_cos_cos_sin1" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView85"


                android:text="@string/sin_sin_cos_cos_sin" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView86"


                android:text="@string/cos_cos_cos_sin_sin1" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView87"

                android:text="@string/cos_cos_cos_sin_sin" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView88"


                android:text="@string/tan_1_tan_tan_tan_tan" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView89"


                android:text="@string/tan_1_tan_tan_tan_tan1" />

            <TextView
                style = "@style/FAheader2"
                android:id="@+id/textView90"

                android:text="@string/product_identities" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView91"

                android:text="@string/_2_sin_x_cos_y_sin_x_y_sin_x_y" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView92"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/_2_cos_x_sin_y_sin_x_y_sin_x_y" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView93"

                android:text="@string/_2_cos_x_cos_y_cos_x_y_cos_x_y" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView94"


                android:text="@string/_2_sin_x_sin_y_cos_x_y_cos_x_y" />

            <TextView
                style = "@style/FAheader2"
                android:id="@+id/textView95"

                android:text="@string/double_angle_identities" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView96"

                android:text="@string/sin_2x_2sin_x_cos_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView97"

                android:text="@string/cos_2x_cos_x_cos_x_sin_x_sin_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView98"

                android:text="@string/cos_2x_2_cos_2_x_1" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView99"


                android:text="@string/cos_2x_2_cos_x_1" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView100"


                android:text="@string/cos_2x_1_2_sin_2_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView101"


                android:text="@string/tan_2x_2tn_x_1_tan_2_x" />

            <TextView
                style = "@style/FAheader2"
                android:id="@+id/textView106"


                android:text="@string/sum_to_product_identities" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView107"


                android:text="@string/sin_x_sin_y_2_sin_x_y_2_cos_x_y_2" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView108"
                android:text="@string/sin_x_sin_y_2_cos_x_y_2_sin_x_y_2" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView109"


                android:text="@string/cos_x_cos_y_2_cos_x_y_2_cos_x_y_2" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView110"

                android:text="@string/cos_x_cos_y_2_sin_x_y_2_sin_x_y_2" />

            <TextView
                style = "@style/FAheader2"
                android:id="@+id/textView1"

                android:text="@string/periodicity_identities_degrees" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView2"

                android:text="@string/sin_x_360_sin_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView3"

                android:text="@string/sin_x_360_cos_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView4"

                android:text="@string/tan_x_180_tan_x" />

            <TextView
                style = "@style/FAbody"
                android:id="@+id/textView5"

                android:text="@string/cot_x_180_cot_x" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>