<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@null"
tools:context=".Maths_Homepage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:background="@drawable/yellow"
                android:id="@+id/LandA_btn"
                style="@style/FAtile"
                android:text="@string/surface_area_and_volume"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Physics_btn" />

            <Button
                android:background="@drawable/orange"
                android:id="@+id/Physics_btn"
                style="@style/FAtile"
                android:text="@string/_2_fundamental_physical_constants"           
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Trig_btn" />

            <Button
                android:background="@drawable/yellow"
                android:id="@+id/Trig_btn"
                style="@style/FAtile"
                android:text="Trigonmetry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:background="@drawable/magenta"
                android:id="@+id/VandA_btn"
                style="@style/FAtile"
                android:text="Get Area and Volume"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quadrix_btn" />

            <Button
                android:background="@drawable/orange"
                android:id="@+id/quadrix_btn"
                style="@style/FAtile"
                android:text="@string/solve_equation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LandA_btn" />
              
              
             <Button
                android:id="@+id/graph_btn"
                android:onClick="openGraphPage"
                android:layout_width="296dp"
                android:layout_height="60dp"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:background="@null"
                android:text="@string/graphing"
                android:textSize="18sp"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/VandA_btn" />
            <Button
                android:id="@+id/Maths_Ni"
                android:layout_width="296dp"
                android:layout_height="60dp"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:background="@null"
                android:text="@string/maths_ni"
                android:onClick="goToNumericalIntegration"
                android:textSize="18sp"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graph_btn"  />



            <Button
                android:id="@+id/differentiate_btn"
                android:onClick="openDifferentiatePage"
                android:layout_width="296dp"
                android:layout_height="60dp"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:background="@null"
                android:text="Differentiate"
                android:textSize="18sp"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Maths_Ni" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>